--- a/src/components/Footer/index.css
+++ b/src/components/Footer/index.css
@@ -1,4 +1,4 @@
-footer{ text-align: center;margin-top: 10px;background-color: #000;color: white;bottom: 0;width: 100%;}
+footer{ text-align: center;margin-top: 10px;background-color: #000;color: white;bottom: 0;width: 100%; margin-top: 2%;}
 .Footer-Title{display: flex;flex-direction: row;}
 .Footer-Img img {width: 50px;height: 50px; margin: auto}
 .Footer_Nav-navlogo{color: #fff;font-weight: bold;text-decoration: none;}
