--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
-.App {
-  text-align: center;
-  /* background: rgb(214, 214, 214);
-  background: linear-gradient(167deg, rgba(214, 214, 214, 1) 0%, rgba(214, 214, 214, 1) 6%); */
-}
+@import url('https://fonts.googleapis.com/css2?family=Pacifico&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Bangers&display=swap');
+
+*{font-family: 'Pacifico', cursive;}
+
+.App {text-align: center;}
