--- a/src/components/Experience/index.css
+++ b/src/components/Experience/index.css
@@ -1,3 +1,3 @@
-.Experience-container{ margin: auto; width: 65%; padding: 3%;}  
+.Experience-container{ margin: auto; width: 75%; padding: 3%;}  
 
-@media only screen and (max-width:680px){.Experience-container{ margin: auto; width: 90%; }}
+@media only screen and (max-width:680px){.Experience-container{ margin: auto; width: 100%; padding: 1.5%;}}
