--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -1,4 +1,4 @@
-*{margin: 0;padding: 0;box-sizing: border-box;font-family: Arial, Helvetica, sans-serif}
+/* *{margin: 0;padding: 0;box-sizing: border-box;font-family: Arial, Helvetica, sans-serif} */
 .NavigationBar_Nav-navbar{position: sticky; top: 0;height: 50px;width: 100%;background: #000;color: white;display: flex;justify-content: space-between;align-items: center;padding: 0 2rem;font-size: 1.2rem;   }
 .NavigationBar_Nav-nav-logo{text-decoration: none;color: white;width: 50px;height: 50px;}
 .Navbar-Img img {width: 50px;height: 50px}
