added exercise api

--- a/src/components/Exercise/index.css
+++ b/src/components/Exercise/index.css
@@ -1,2 +1,10 @@
 .Exercise-Container{ margin: auto; width: 75%; padding: 3%; min-height: 82vh;}  
-@media only screen and (max-width:680px){.Exercise-Container{ margin: auto; width: 100%; padding: 1.5%;}}
+.exercise-card-container {display: flex;flex-wrap: wrap;justify-content:space-between ;overflow-y: auto;height: 400px;margin-top: 20px;padding-right: 20px;}
+.card {width: calc(33.33% - 20px);margin-bottom: 20px;}
+@media only screen and (min-width:681px) and (max-width : 942px){
+    .card {width: calc(50% - 20px);margin-bottom: 20px;}
+}
+@media only screen and (max-width:680px){
+.Exercise-Container{ margin: auto; width: 100%; padding: 1.5%;min-height: 80vh;}
+.card {width: 100%;margin-bottom: 20px;}
+}
