--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Pacifico&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Bangers&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@500&display=swap');
 
-*{font-family: 'Pacifico', cursive;}
+/* *{font-family: 'Pacifico', cursive;} */
+*{font-family: 'Roboto Slab', serif;}
 
 .App {text-align: center;}
