--- a/src/components/Exercise/index.css
+++ b/src/components/Exercise/index.css
@@ -1,5 +1,6 @@
-.Exercise-Container{ margin: auto; width: 75%; padding: 3%; min-height: 82vh;}  
-.exercise-card-container {display: flex;flex-wrap: wrap;justify-content:space-between ;overflow-y: auto;height: 450px;margin-top: 20px;}
+.Exercise-Container{ margin: auto; width: 75%; padding: 2%; min-height: 82vh;margin-top: 2%;}  
+.exercise-card-container {display: flex;flex-wrap: wrap;justify-content:space-between ;overflow-y: auto;height: 500px;margin-top: 20px;}
+.exercise-card-container::-webkit-scrollbar {display: none;}
 .card {width: calc(33.33% - 20px);margin-bottom: 20px;}
 @media only screen and (min-width:681px) and (max-width : 942px){
     .card {width: calc(50% - 20px);margin-bottom: 20px;}
