--- a/src/components/Experience/index.css
+++ b/src/components/Experience/index.css
@@ -1,3 +1,3 @@
-.Experience-container{ margin: auto; width: 75%; padding: 3%;min-height: 85vh;} 
+.Experience-container{ margin: auto; width: 75%; padding-top: 5%;min-height: 88vh;} 
 
 @media only screen and (max-width:680px){.Experience-container{ margin: auto; width: 100%; padding: 1.5%;}}
