--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -23,7 +23,7 @@
 @keyframes example {0%   {color:yellow;}25%  {color:#00FFFF;}50%  {color:#FF7171;}75%  {color:Magenta;}100% {color:yellow;}}
   
 @media only screen and (max-width:680px){
-    .NavigationBar_Nav-navbar{position: relative;}
+    .NavigationBar_Nav-navbar{position: sticky; top: 0;height: 50px; z-index: 10000;}
     .NavigationBar_Nav-nav-links{padding-top: 38px;display: flex;flex-direction: column;position: absolute;text-align: center;width: 100%;top: 50px;left: -100%;transition: 0.5s all;height: 305px;margin: 0, auto}
     .NavigationBar_Nav-nav-links.active{background: #000;left: 0;z-index: 5;top: 50px}
     .NavigationBar_Nav-nav-item{padding: 10px 0;}
