--- a/src/components/Nutrition/index.css
+++ b/src/components/Nutrition/index.css
@@ -1,1 +1,4 @@
-.Nutrition-container{min-height: 82vh;}
+.Nutrition-container{margin: auto; width: 75%; padding: 2%; min-height: 70vh;margin-top: 2%;}
+.nutrition-card-container {display: flex;flex-wrap: wrap;justify-content:space-around ;overflow-y: auto;height: 500px;margin-top: 0;}
+.nutrition-card-container::-webkit-scrollbar {display: none;}
+.card {width: calc(33.33% - 20px);margin-bottom: 20px; height: fit-content;}
