--- a/src/components/Nutrition/index.css
+++ b/src/components/Nutrition/index.css
@@ -1,7 +1,7 @@
 .Nutrition-container{ margin: auto; width: 75%; padding: 2%; min-height: 82vh;margin-top: 2%;}  
-.nutrition-card-container {display: flex;flex-wrap: wrap;justify-content:space-between ;overflow-y: auto;height: 500px;margin-top: 20px;}
+.nutrition-card-container {display: flex;flex-wrap: wrap;justify-content:space-between;margin-top: 20px;}
 .nutrition-card-container::-webkit-scrollbar {display: none;}
-.card {width: calc(33.33% - 20px);margin-bottom: 20px;}
+.card {width: calc(33.33% - 20px);margin-bottom: 20px; height: fit-content;}
 @media only screen and (min-width:681px) and (max-width : 942px){
     .card {width: calc(50% - 20px);margin-bottom: 20px;}
 }
